test/should_not_compile/syntax_datbind2.sml
datatype t = T
     and u = T;
